[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Boss Health Bar/Progress2.png" type="Texture" id=1]
[ext_resource path="res://UI/Boss Health Bar/FullBG.png" type="Texture" id=2]
[ext_resource path="res://UI/Boss Health Bar/Border.png" type="Texture" id=3]
[ext_resource path="res://UI/Boss Health Bar/HealthBar.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 9 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/Border.png-96c3677f2364ed7a449c873ace1c15fb.stex"

[node name="BossLifeBar" type="CanvasLayer"]

[node name="HealthBar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HealthBar"]
margin_left = 166.0
margin_top = 3.0
margin_right = 421.0
margin_bottom = 28.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
margin_left = 191.0
margin_top = 3.0
margin_right = 396.0
margin_bottom = 28.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HealthBar"]
margin_left = 166.0
margin_top = 3.0
margin_right = 192.0
margin_bottom = 28.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="HealthBar"]
margin_left = 395.0
margin_top = 3.0
margin_right = 421.0
margin_bottom = 28.0
texture = SubResource( 3 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HealthBar"]

[node name="RemoverBar" type="Timer" parent="HealthBar"]
one_shot = true

[connection signal="tween_all_completed" from="HealthBar/Tween" to="HealthBar" method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="HealthBar/RemoverBar" to="HealthBar" method="_on_RemoverBar_timeout"]
